--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+     <section>
     <div class="container">
         <div class="header">
             <div class="search-box">
@@ -43,7 +44,7 @@
                 </div>
             </div>
     </div>
-
+ <section>
 
     <script src="script.js"></script>
 </body>
